fix horizontal overflow problems

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,3 @@
-body {
-  overflow-y: hidden;
-}
-
 section.block-section {
   padding: 3.5em 0;
 }
